<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00F44336"
    android:padding="10dp"
    tools:context="com.example.project.SearchActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hasntag_being_used"
        android:layout_marginTop="50dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/keyWordBeingSearched"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize = "30sp"
        android:layout_marginTop="80dp"
        android:text="@string/hashtag" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language_being_used"
        android:layout_marginTop="130dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/languageUsed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize = "30sp"
        android:layout_marginTop="170dp"
        android:text="@string/language" />

    <Button
        android:id="@+id/searchBTN"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="230dp"
        android:background="@drawable/gradient_button"
        android:text="@string/search" />

    <TextView
        android:id="@+id/tweets"
        android:layout_width="match_parent"
        android:layout_height="188dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="280dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/chooseBTN"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="460dp"
        android:background="@drawable/gradient_button"
        android:text="@string/choose" />
</RelativeLayout>