<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00F44336"
    android:padding="10dp"
    tools:context="com.example.project.TranslateActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:text="@string/would_you_like_to_translate_this_tweet"/>

    <TextView
        android:id="@+id/tweetToTranslate"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:textSize="20sp"
        android:text="@string/text"/>

    <Button
        android:id="@+id/translateBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/gradient_button"
        android:text="@string/translate" />

    <TextView
        android:id="@+id/translatedTweet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="365dp"
        android:text="@string/translated_tweet"
        android:textSize="20sp" />


</RelativeLayout>